--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -210,3 +210,19 @@ input[type=number] {
     border: .6em solid #00a0df;
     border-right-color: transparent
 }
+
+.overflow-y-auto {
+    overflow-y: auto !important;
+}
+
+.overflow-x-auto {
+    overflow-x: auto !important;
+}
+
+.overflow-y-hidden {
+    overflow-y: hidden !important;
+}
+
+.overflow-x-hidden {
+    overflow-x: hidden !important;
+}
