--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -226,3 +226,11 @@ input[type=number] {
 .overflow-x-hidden {
     overflow-x: hidden !important;
 }
+
+.grow {
+    transition: all .2s ease-in-out;
+}
+
+.grow:hover {
+    transform: scale(1.1);
+}
